--- a/tp_machine_learning.ipynb
+++ b/tp_machine_learning.ipynb
@@ -684,9 +684,11 @@
     "X = df.drop(columns=['stroke', 'id'])\n",
     "y = df['stroke']\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.3, stratify=y, random_state=42\n",
-    ")"
+    "# Primero: train + valid vs test\n",
+    "X_temp, X_test, y_temp, y_test = train_test_split(X, y, test_size=0.15, stratify=y)\n",
+    "\n",
+    "# Luego: train vs valid\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X_temp, y_temp, test_size=0.15/0.85, stratify=y_temp)"
    ],
    "id": "2709eaab8a04b78b",
    "outputs": [],
@@ -806,7 +808,7 @@
     "    verbose=2\n",
     ")\n",
     "\n",
-    "grid_search.fit(X_train, y_train)\n",
+    "grid_search.fit(X_train, y_val)\n",
     "\n",
     "print(grid_search.best_params_)\n",
     "\n",
