--- a/tp_machine_learning-multi_model.ipynb
+++ b/tp_machine_learning-multi_model.ipynb
@@ -13,7 +13,13 @@
     "\n",
     "Fuente del dataset:\n",
     "Federico Soriano, Stroke Prediction Dataset, Kaggle (2021).\n",
-    "Disponible en: https://www.kaggle.com/datasets/fedesoriano/stroke-prediction-dataset"
+    "Disponible en: https://www.kaggle.com/datasets/fedesoriano/stroke-prediction-dataset\n",
+    "\n",
+    "## Miembros del grupo\n",
+    "- Maximiliano Christener\n",
+    "- Ronald Uthurralt\n",
+    "- Juan Pablo Skobalski\n",
+    "- Luis Díaz"
    ]
   },
   {
