--- a/tp_machine_learning-multi_model.ipynb
+++ b/tp_machine_learning-multi_model.ipynb
@@ -953,11 +953,15 @@
    "cell_type": "markdown",
    "source": [
     "# KNN\n",
-    "\n",
-    "En esta seccion se utiliza un clasificador KNN (K-nearest neighbors), por las siguientes razones:\n",
-    "\n",
-    "* El problema es de clasificación binaria con variables tanto numéricas como categóricas. Aplicar KNN en este caso ya que tiene un enfoque que se apoya en la proximidad entre muestras cercanas y permite capturar patrones locales.\n",
-    "- KNN ofrece una interpretación intuitiva, puesto que el registro de un paciente nuevo se clasifica según el grupo de pacientes al que se parecen más sus características."
+    "Características:\n",
+    "* Es un modelo basado en proximidad: clasifica un paciente según la similitud con otros casos cercanos en el espacio de características.\n",
+    "* No asume ninguna forma funcional ni relación lineal entre variables, lo que lo convierte en un método flexible para detectar patrones locales en los datos.\n",
+    "* Su funcionamiento es sencillo de interpretar: la predicción depende directamente de los vecinos más próximos, lo que facilita la explicación del resultado.\n",
+    "* Sensible a la escala de las variables, por lo que requiere una estandarización previa para que ninguna feature domine las distancias.\n",
+    "* Puede capturar relaciones complejas entre las variables clínicas (edad, glucosa, BMI, etc.) cuando existen agrupamientos naturales en los datos.\n",
+    "* Requiere seleccionar adecuadamente el número de vecinos (*k*) y el tipo de distancia, ya que un k demasiado bajo genera ruido y uno demasiado alto diluye la señal.\n",
+    "* No maneja bien el desbalance de clases de forma nativa, lo que puede causar que los casos positivos (poco frecuentes) queden eclipsados por la mayoría negativa.\n",
+    "* Computacionalmente costoso para grandes volúmenes de datos, ya que evalúa distancias contra todas las muestras de entrenamiento."
    ],
    "id": "2f6c7e63eeca4a6a"
   },
@@ -1541,12 +1545,6 @@
     }
    ],
    "execution_count": 25
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "# METRICAS COMPARATIVAS",
-   "id": "86f2316f69e1d97d"
   },
   {
    "metadata": {
